toolchain/parse/src/snapshots/knot_parse__component__tests__attribute_on_element.snap
---
source: toolchain/parse/src/component.rs
expression: ast
---
Component(
    Node(
        OpenElement {
            start_tag: "foo",
            attributes: [
                Attribute(
                    Node(
                        Explicit(
                            "bar",
                            Expression(
                                Node(
                                    Primitive(
                                        Nil,
                                    ),
                                    Range(
                                        Point(
                                            1,
                                            10,
                                        ),
                                        Point(
                                            1,
                                            12,
                                        ),
                                    ),
                                    (),
                                ),
                            ),
                        ),
                        Range(
                            Point(
                                1,
                                6,
                            ),
                            Point(
                                1,
                                12,
                            ),
                        ),
                        (),
                    ),
                ),
            ],
            children: [],
            end_tag: "foo",
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                19,
            ),
        ),
        (),
    ),
)
