toolchain/parse/src/snapshots/knot_parse__component__tests__attribute_punned.snap
---
source: toolchain/parse/src/component.rs
expression: ast
---
Component(
    Node(
        ClosedElement(
            "foo",
            [
                Attribute(
                    Node(
                        Punned(
                            "bar",
                        ),
                        Range(
                            Point(
                                1,
                                6,
                            ),
                            Point(
                                1,
                                8,
                            ),
                        ),
                        (),
                    ),
                ),
            ],
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                11,
            ),
        ),
        (),
    ),
)
