toolchain/parse/src/snapshots/knot_parse__component__tests__closed_element.snap
---
source: toolchain/parse/src/component.rs
expression: ast
---
Component(
    Node(
        ClosedElement(
            "foo",
            [],
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                7,
            ),
        ),
        (),
    ),
)
