toolchain/parse/src/snapshots/knot_parse__component__tests__element_in_element.snap
---
source: toolchain/parse/src/component.rs
expression: ast
---
Component(
    Node(
        OpenElement {
            start_tag: "foo",
            attributes: [],
            children: [
                Component(
                    Node(
                        ClosedElement(
                            "bar",
                            [],
                        ),
                        Range(
                            Point(
                                1,
                                6,
                            ),
                            Point(
                                1,
                                12,
                            ),
                        ),
                        (),
                    ),
                ),
            ],
            end_tag: "foo",
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                18,
            ),
        ),
        (),
    ),
)
