toolchain/parse/src/snapshots/knot_parse__component__tests__fragment.snap
---
source: toolchain/parse/src/component.rs
expression: ast
---
Component(
    Node(
        Fragment(
            [],
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                5,
            ),
        ),
        (),
    ),
)
