toolchain/parse/src/snapshots/knot_parse__component__tests__fragment_in_fragment.snap
---
source: toolchain/parse/src/component.rs
expression: ast
---
Component(
    Node(
        Fragment(
            [
                Component(
                    Node(
                        Fragment(
                            [],
                        ),
                        Range(
                            Point(
                                1,
                                3,
                            ),
                            Point(
                                1,
                                7,
                            ),
                        ),
                        (),
                    ),
                ),
            ],
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                10,
            ),
        ),
        (),
    ),
)
