toolchain/parse/src/snapshots/knot_parse__component__tests__inline_in_fragment.snap
---
source: toolchain/parse/src/component.rs
expression: ast
---
Component(
    Node(
        Fragment(
            [
                Component(
                    Node(
                        Expression(
                            Expression(
                                Node(
                                    Primitive(
                                        Nil,
                                    ),
                                    Range(
                                        Point(
                                            1,
                                            4,
                                        ),
                                        Point(
                                            1,
                                            6,
                                        ),
                                    ),
                                    (),
                                ),
                            ),
                        ),
                        Range(
                            Point(
                                1,
                                3,
                            ),
                            Point(
                                1,
                                7,
                            ),
                        ),
                        (),
                    ),
                ),
            ],
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                10,
            ),
        ),
        (),
    ),
)
